Deal with Java 7 reliable build issues